2023-09-23T00:40:55Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6280485295 # 1925
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-23
* notice: last 14d: unq all: 6 20
* notice: prev accum: outdated-unq outdated-all / unq all: 732 1356 / 746 1377
* notice: next accum: outdated-unq outdated-all / unq all: 733 1358 / 746 1378
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2023-09-08] / [2023-09-22]

2023-09-22T08:12:19Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6271786600 # 1923
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-22
* notice: last 14d: unq all: 6 20
* notice: prev accum: outdated-unq outdated-all / unq all: 732 1356 / 745 1376
* notice: next accum: outdated-unq outdated-all / unq all: 732 1356 / 746 1377
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-09-08 2023-09-22]

2023-09-22T00:42:33Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6268650569 # 1922
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-22
* notice: last 14d: unq all: 6 20
* notice: prev accum: outdated-unq outdated-all / unq all: 731 1355 / 744 1375
* notice: next accum: outdated-unq outdated-all / unq all: 732 1356 / 745 1376
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2023-09-07] / [2023-09-21]

2023-09-21T00:42:10Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6255688173 # 1919