@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-09-23T00:40:55Z",
+  "timestamp" : "2023-09-23T08:10:36Z",
   "count_outdated" : 1358,
   "uniques_outdated" : 733,
-  "count" : 1378,
-  "uniques" : 746,
+  "count" : 1379,
+  "uniques" : 747,
   "clones" : [
     {
       "timestamp": "2023-09-09T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -100,6 +100,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-09-23T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
