@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2023-09-09T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -55,6 +55,11 @@
     {
       "timestamp": "2023-09-22T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-09-23T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
